# Explainable_Deep-Ensemble_Bias_Correction_of_GloFAS-ERA5

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements.txt
configs/: default.yaml  secrets.env.example
notebooks/: reproduce_colab.ipynb  sbc_pipeline.ipynb
results/shap/: global_importance.csv  global_importance.parquet  regime_importance.csv  regime_importance.parquet
results/tables/: ablation_real_decadal.csv  ablation_real_decadal.parquet  calibration_fixed_coverage_real_decadal.csv  calibration_fixed_real_decadal.csv  calibration_real_decadal.csv  calibration_real_decadal.parquet  cmal_uq_comparison_real_decadal.csv  cmal_uq_comparison_real_decadal.parquet  constraint_ablation_real_decadal.csv  constraint_ablation_real_decadal.parquet  decision_skill_real_decadal.csv  decision_skill_real_decadal.parquet  diag_fdc_segments_real_decadal.csv  diag_fdc_segments_real_decadal.parquet  diag_peak_timing_real_decadal.csv  diag_peak_timing_real_decadal.parquet  diag_regime_skill_real_decadal.csv  diag_regime_skill_real_decadal.parquet  diag_seasonal_decade_real_decadal.csv  diag_seasonal_decade_real_decadal.parquet  diag_seasonal_month_real_decadal.csv  diag_seasonal_month_real_decadal.parquet  dual_kge_real_decadal.csv  dual_kge_real_decadal.parquet  flagship_shap_importance.csv  flagship_shap_importance.parquet  flagship_shap_regime.csv  flagship_shap_regime.parquet  gate_alignment_real_decadal.csv  gate_alignment_real_decadal.parquet  group_shap_stability_real_decadal.csv  group_shap_stability_real_decadal.parquet  monotonicity_violation_real_decadal.csv  monotonicity_violation_real_decadal.parquet  monthly_saber_real.csv  monthly_saber_real.parquet  per_gauge_canonical_decadal.csv  per_gauge_canonical_decadal.parquet  per_gauge_enhanced_real_decadal.csv  per_gauge_enhanced_real_decadal.parquet  (+34 more)
scripts/: assemble_manuscript.py  download_era5_land.py  download_glofas.py  make_figures.py  run_calibration_fixed.py  run_cmal_eval.py  run_consolidate.py  run_enhancements.py  run_final_rigor.py  run_real_pipeline.py  run_round2_analyses.py  run_v2_experiment.py  run_v2_extras.py  run_v3_evaluation.py  test_cds_download.py  to_docx.sh  tune_boosting.py
scripts/figures/: fig01_study_area.py  fig02_framework.py  fig03_raw_bias.py  fig04_skill_by_split.py  fig05_improvement_map.py  fig06_ablation.py  fig07_calibration.py  fig08_uq_methods.py  fig09_regime_analysis.py  fig10_xai_importance.py  fig11_pur_attribution.py  fig12_hydrographs.py  fig13_naryn_daily.py  fig14_decision_fdc.py  graphical_abstract.py
src/sbc/: __init__.py  ablation.py  config.py  experiment.py  multiscale.py  reconciliation.py  schemas.py  synthetic.py
src/sbc/data/: __init__.py  _cds.py  assemble.py  ca_discharge.py  domain.py  era5_land.py  glofas.py  (+1 more)
tests/: test_smoke.py
(+42 files in other folders)
