# =============================================================================
#  sbc — Snow-influenced streamflow Bias Correction
#  PEP 621 project metadata (src layout, setuptools build backend)
# =============================================================================
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbc"
version = "0.1.0"
description = "Explainable Deep Ensemble Learning for Multi-Scale Streamflow Bias Correction in GloFAS-ERA5 across Snow-Influenced Transboundary Basins of Central Asia"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "sbc authors", email = "corresponding.author@example.org" },
]
maintainers = [
    { name = "sbc authors", email = "corresponding.author@example.org" },
]
keywords = [
    "hydrology",
    "bias correction",
    "streamflow",
    "GloFAS",
    "ERA5-Land",
    "snowmelt",
    "Central Asia",
    "deep ensemble",
    "explainable AI",
    "machine learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies (kept in sync with requirements.txt; minimum-version
# pins only so the stack resolves cleanly on a fresh venv and on Google Colab).
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "xarray>=2023.6",
    "netcdf4>=1.6",
    "h5netcdf>=1.1",
    "cftime>=1.6",
    "rioxarray>=0.15",
    "dask>=2023.5",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "catboost>=1.2",
    "torch>=2.1",
    "optuna>=3.4",
    "shap>=0.44",
    "properscoring>=0.1",
    "geopandas>=0.14",
    "pyogrio>=0.7",
    "cdsapi>=0.7.2",
    "pyyaml>=6.0",
    "pyarrow>=14.0",
    "matplotlib>=3.7",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.urls]
Homepage = "https://github.com/your-org/sbc"
Repository = "https://github.com/your-org/sbc"
Issues = "https://github.com/your-org/sbc/issues"

# -- setuptools: src layout, automatic package discovery under src/ -----------
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sbc*"]

[tool.ruff]
line-length = 100
target-version = "py310"
